[project]
name = "py-dagviz"
version = "0.1.0"
authors = [
    { name="Tongfei Chen", email="tongfei@pm.me" }
]
description = "CLI visualizer of directed acyclic graphs"
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "networkx >= 2.8"
]

[project.urls]
"Homepage" = "https://github.com/ctongfei/py-dagviz"
"Bug Tracker" = "https://github.com/ctongfei/py-dagviz/issues"
